tests/static/pass/inline/3.1-b.c
// Inline definition, but not an external definition.
inline int f(void) { return 0; }
